[project]
name = "pyinfrincus"
version = "0.6.2"
description = "A pyinfra connector for incus."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Alex Wehrli" }
]
requires-python = ">=3.10,<4"
dependencies = [
    "pyinfra>3.5"
]

[dependency-groups]
test = ["pytest"]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project.entry-points.'pyinfra.connectors']
incus = "pyinfrincus.connector.incus:Incus"
